tests/fixtures/invalid/none_pow_none.py
# Cannot power None and None
x: None = None ** None
